output_9.2.148/reduce_quda.cu.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/9.2.148'
/tmp/reduce_quda.cu-f4ad67.hip:376:71: error: use of undeclared identifier 'QUDA_PRECISION'
          errorQuda("QUDA_PRECISION=%d does not enable precision %d", QUDA_PRECISION, x.Precision());
                                                                      ^
/tmp/reduce_quda.cu-f4ad67.hip:403:71: error: use of undeclared identifier 'QUDA_PRECISION'
          errorQuda("QUDA_PRECISION=%d does not enable precision %d", QUDA_PRECISION, x.Precision());
                                                                      ^
/tmp/reduce_quda.cu-f4ad67.hip:438:71: error: use of undeclared identifier 'QUDA_PRECISION'
          errorQuda("QUDA_PRECISION=%d does not enable precision %d", QUDA_PRECISION, x.Precision());
                                                                      ^
/tmp/reduce_quda.cu-f4ad67.hip:475:71: error: use of undeclared identifier 'QUDA_PRECISION'
          errorQuda("QUDA_PRECISION=%d does not enable precision %d", QUDA_PRECISION, x.Precision());
                                                                      ^
/tmp/reduce_quda.cu-f4ad67.hip:615:71: error: use of undeclared identifier 'QUDA_PRECISION'
          errorQuda("QUDA_PRECISION=%d does not enable precision %d", QUDA_PRECISION, z.Precision());
                                                                      ^
/tmp/reduce_quda.cu-f4ad67.hip:679:71: error: use of undeclared identifier 'QUDA_PRECISION'
          errorQuda("QUDA_PRECISION=%d does not enable precision %d", QUDA_PRECISION, x.Precision());
                                                                      ^
In file included from <built-in>:1:
In file included from /sw/summit/hip/hip2.6-cuda9.2/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:338:
/sw/summit/cuda/9.2.148/include/texture_indirect_functions.h:108:4: error: use of undeclared identifier '__nv_tex_surf_handler'
   __nv_tex_surf_handler("__itex1Dfetch", ptr, obj, x);
   ^
/sw/summit/cuda/9.2.148/include/texture_indirect_functions.h:117:3: note: in instantiation of function template specialization 'tex1Dfetch<int4>' requested here
  tex1Dfetch(&ret, texObject, x);
  ^
./quda/include/texture.h:41:46: note: in instantiation of function template specialization 'tex1Dfetch<int4>' requested here
{ double2 out; copyFloatN(out, fetch_double2(tex1Dfetch<int4>(spinor, idx))); return out; }
                                             ^
7 errors generated when compiling for host.
Error while processing /tmp/reduce_quda.cu-f4ad67.hip.

[HIPIFY] info: file './quda/lib/reduce_quda.cu' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 45
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 175
  TOTAL bytes: 36337
  CHANGED lines of code: 13
  TOTAL lines of code: 849
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 2
  TIME ELAPSED s: 2.74
[HIPIFY] info: CONVERTED refs by type:
  error: 1
  memory: 1
  event: 2
  execution: 32
  type: 5
  numeric_literal: 3
  define: 1
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 45
[HIPIFY] info: CONVERTED refs by names:
  cudaEventCreateWithFlags: 1
  cudaEventDestroy: 1
  cudaEventDisableTiming: 1
  cudaEvent_t: 2
  cudaHostGetDevicePointer: 1
  cudaLaunchKernel: 32
  cudaMemcpyDeviceToHost: 1
  cudaPeekAtLastError: 1
  cudaStream_t: 3
  cudaSuccess: 2
